--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ repositories {
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
-    compile('org.springframework.boot:spring-boot-starter-web')
+    compile('org.springframework.boot:spring-boot-starter-codesquad.web')
     compile('org.springframework.boot:spring-boot-devtools')
     compile('org.hibernate:hibernate-java8')
     compile('pl.allegro.tech.boot:handlebars-spring-boot-starter:0.3.0')
