--- a/build.gradle
+++ b/build.gradle
@@ -29,8 +29,10 @@ dependencies {
     compile('org.springframework.boot:spring-boot-devtools')
     compile('org.hibernate:hibernate-java8')
     compile('pl.allegro.tech.boot:handlebars-spring-boot-starter:0.3.0')
-    runtime('com.h2database:h2')
+    compile('org.projectlombok:lombok:1.16.18')
+    compile('com.h2database:h2:1.4.192')
     runtime('net.rakugakibox.spring.boot:logback-access-spring-boot-starter:2.7.1')
+    runtime('com.h2database:h2')
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('org.assertj:assertj-core:3.10.0')
 }
