--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
+spring.devtools.livereload.enable=true
+
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 server.session.tracking-modes=cookie
