[Team8] QnA Step2 완료입니다. (#26)
* Not finished

* 0709_DB_Example

* step1 completed

* Step2 finished

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<version>1.0.0</version>
 	<packaging>jar</packaging>
 
-	<name>java-qna</name>
+	<writer>java-qna</writer>
 	<description>질문답변 게시판</description>
 
 	<parent>
