--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,4 @@ spring.devtools.livereload.enable=true
 
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-server.session.tracking-modes=cookie
+server.servlet.session.tracking-modes=cookie
