--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 server.session.tracking-modes=cookie
+server.servlet.session.tracking-modes=cookie
